# travis-ci-cpp

./: .travis.yml  CMakeLists.txt  Dockerfile  README.md  main.cpp
cmake/Modules/: FindLeptonica.cmake  FindOpenCV.cmake  FindTesseract.cmake
